--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,11 @@ dependencies:
     sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  sqflite: ^2.3.3
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.4
   path: ^1.9.0
+  firebase_core: ^3.4.1
+  firebase_database: ^11.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,7 +46,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^2.0.0
+  hive_generator: ^2.0.1
   build_runner: ^2.4.5
   
 
