--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   path: ^1.9.0
   firebase_core: ^3.4.1
   firebase_database: ^11.1.2
+  connectivity_plus: ^6.0.5
+  uuid: ^3.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
