--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_database: ^11.1.2
   connectivity_plus: ^6.0.5
   uuid: ^3.0.4
+  http: ^1.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
