--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   sqflite: ^2.3.3+1
+  provider: ^6.1.2
   path_provider: ^2.1.4
   path: ^1.9.0
   firebase_core: ^3.4.1
